Image popup modal on detail page doesn't resize according to screen size - FIXED
Editing CPT tag not updating tag for associated CPT listing - FIXED
Changes made for marker cluster addon to allow server side clustering - ADDED
New login page now compatible with buddypress registration form for redirect option - CHANGED
GD import speed improved -  CHANGED

v1.5.2
Map view type TERRAIN option added for all the maps - FIXED
Upgrade function `gd_fix_cpt_rewrite_slug` set to run on every upgrade incase a user misses a version - CHANGED
Renamed Directory_Theme to Directory_Starter - FIXED
Avada box style not working for some pages - FIXED
Share this links to details pages can sometimes cause JS error from jQuery history hash object - FIXED
WPML, other translation links on details pages can be broken when viewing on non default language - FIXED
Filter added to change recent reviews excerpt length - ADDED
Details table limiting city,region,country names to 30 char, some region names are longer, changed to 50 char - FIXED
Image file for custom field not enlarging using modal if displayed as tab on detail page - FIXED
IE map infowindow can appear very small in height - FIXED
Added filter for adding the location to the url, so it can be filtered from addons - ADDED
Popup custom field image file in lightbox modal not working on home page and listing pages - FIXED
Details map and details page map widget mapview not changing from ROADMAP - FIXED
Details page mobile tabs view improved - CHANGED
General option added to set if user deleted posts go to trash or are permanently deleted - ADDED
Date custom field default format of mm/dd/yy added and descriptions of each format added for better understanding - CHANGED
Changed textdomain from defined constant to a string 'geodirectory' - CHANGED
Awesome font upgraded with new Awesome font version 4.4.0 - CHANGED

v1.5.1
Default sort by titles not translatable - FIXED